force-app/main/default/objects/Estimation__c/fields/Discount_Amount_Item__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_Item__c</fullName>
    <label>Discount Amount Item</label>
    <summarizedField>Estimation_Item__c.Final_Discount_Amount__c</summarizedField>
    <summaryForeignKey>Estimation_Item__c.Estimation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>