force-app/main/default/objects/Estimation__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line Item Discount</fullName>
            </value>
            <value>
                <fullName>Lumpsum Discount</fullName>
                <default>true</default>
                <label>Lumpsum Discount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>