force-app/main/default/objects/Estimation__c/fields/ES_Address1__c.field-meta.xml
<CustomField>
    <fullName>ES_Address1__c</fullName>
    <formula>&apos;PO Box 451269,Dubai&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES Address1</label>
    <type>Text</type>
</CustomField>