force-app/main/default/objects/Estimation__c/fields/ES_Address3__c.field-meta.xml
<CustomField>
    <fullName>ES_Address3__c</fullName>
    <formula>&apos;TRN 100504732700003&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES Address3</label>
    <type>Text</type>
</CustomField>