force-app/main/default/objects/Estimation__c/fields/ES_cust_name__c.field-meta.xml
<CustomField>
    <fullName>ES_cust_name__c</fullName>
    <formula>Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES cust name</label>
    <type>Text</type>
</CustomField>