force-app/main/default/objects/Estimation__c/fields/ES_Heading__c.field-meta.xml
<CustomField>
    <fullName>ES_Heading__c</fullName>
    <formula>&apos;Estimation&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES Heading</label>
    <type>Text</type>
</CustomField>