force-app/main/default/objects/Estimation__c/fields/ES_Notes__c.field-meta.xml
<CustomField>
    <fullName>ES_Notes__c</fullName>
    <formula>&apos;Notes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES Notes</label>
    <type>Text</type>
</CustomField>