force-app/main/default/objects/Estimation__c/fields/Es_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Es_Order_Date__c</fullName>
    <formula>&quot;:&quot; &amp; &quot;            &quot;&amp; 
IF(
    NOT(ISBLANK(Order_Date__c)),
    IF(DAY(Order_Date__c) &lt; 10, &quot;0&quot; &amp; TEXT(DAY(Order_Date__c)), TEXT(DAY(Order_Date__c))) &amp; &quot;-&quot; &amp;
    IF(MONTH(Order_Date__c) &lt; 10, &quot;0&quot; &amp; TEXT(MONTH(Order_Date__c)), TEXT(MONTH(Order_Date__c))) &amp; &quot;-&quot; &amp;
    TEXT(YEAR(Order_Date__c)),
    NULL
)</formula>
    <label>Es Order Date</label>
    <type>Text</type>
</CustomField>