force-app/main/default/objects/Estimation__c/fields/ES_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ES_Payment_Terms__c</fullName>
    <formula>&quot;:    &quot; &amp;&quot; &quot;&amp;  Payment_Terms__c</formula>
    <label>ES Payment Terms</label>
    <type>Text</type>
</CustomField>