force-app/main/default/objects/Estimation__c/fields/ES_Proj_Ref__c.field-meta.xml
<CustomField>
    <fullName>ES_Proj_Ref__c</fullName>
    <formula>&quot;:  &quot;&amp;  Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES Proj Ref</label>
    <type>Text</type>
</CustomField>