force-app/main/default/objects/Estimation__c/fields/ES_shipping_terms__c.field-meta.xml
<CustomField>
    <fullName>ES_shipping_terms__c</fullName>
    <formula>&quot;:    &quot; &amp; &quot; &quot; &amp; Shipping_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES shipping terms</label>
    <type>Text</type>
</CustomField>