force-app/main/default/objects/Estimation__c/fields/ES_Thanks__c.field-meta.xml
<CustomField>
    <fullName>ES_Thanks__c</fullName>
    <formula>&apos;Thanks for giving us the opportunity to serve you.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES Thanks</label>
    <type>Text</type>
</CustomField>