force-app/main/default/objects/Estimation__c/fields/ES_To_Address1__c.field-meta.xml
<CustomField>
    <fullName>ES_To_Address1__c</fullName>
    <formula>IF(
ISBLANK(Customer__r.BillingStreet  ),
&quot;&quot;,
Customer__r.BillingStreet &amp; &quot;, &quot;
) &amp;
IF(
ISBLANK(Customer__r.BillingCity  ),
&quot;&quot;,
Customer__r.BillingCity  &amp; &quot;, &quot;
) &amp;
IF(
ISBLANK(Customer__r.BillingState  ),
&quot;&quot;,
Customer__r.BillingState &amp; &quot;, &quot;
) &amp;
IF(
ISBLANK(Customer__r.BillingPostalCode  ),
&quot;&quot;,
Customer__r.BillingPostalCode &amp; &quot;, &quot;
) &amp;
IF(
ISBLANK(Customer__r.BillingCountry  ),
&quot;&quot;,
Customer__r.BillingCountry 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES To Address1</label>
    <type>Text</type>
</CustomField>