force-app/main/default/objects/Estimation__c/fields/ES_To_Address2__c.field-meta.xml
<CustomField>
    <fullName>ES_To_Address2__c</fullName>
    <formula>&apos;Dubai-United Arab Emirates&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES To Address2</label>
    <type>Text</type>
</CustomField>