force-app/main/default/objects/Estimation__c/fields/Est_Number__c.field-meta.xml
<CustomField>
    <fullName>Est_Number__c</fullName>
    <displayFormat>IP/EST/25/{0000}</displayFormat>
    <label>Est Number</label>
    <type>AutoNumber</type>
</CustomField>