force-app/main/default/objects/Estimation__c/fields/Estimation_Version__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Version__c</fullName>
    <label>Estimation Version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>