force-app/main/default/objects/Estimation__c/fields/ET_Vers_no__c.field-meta.xml
<CustomField>
    <fullName>ET_Vers_no__c</fullName>
    <formula>IF(
  Estimation_Version__c &gt; 0,
  &quot;Vers No : &quot; &amp; TEXT(Estimation_Version__c),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ET Vers no</label>
    <type>Text</type>
</CustomField>