force-app/main/default/objects/Estimation__c/fields/Final_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Discount_Amount__c</fullName>
    <formula>IF(
ISPICKVAL(Discount_Mode__c, &quot;Amount&quot;), Total_Discount_Amount__c ,
IF(
ISPICKVAL(Discount_Mode__c, &quot;Percentage&quot;),
( Grand_Total__c  * Total_Discount_Percentage__c ),
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>