force-app/main/default/objects/Estimation__c/fields/Final_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Total_Amount__c</fullName>
    <formula>IF(ISPICKVAL( Discount_Type__c,&apos;Lumpsum Discount&apos; ), Grand_Total_After_Discount__c   +  Tax_Amount__c  ,
IF(ISPICKVAL( Discount_Type__c,&apos;Line Item Discount&apos; ), Total_Amount_with_Tax__c ,Total_Amount_with_Tax__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>