force-app/main/default/objects/Estimation__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <description>Calculate the total amount of estimation items</description>
    <label>Grand Total</label>
    <summarizedField>Estimation_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Estimation_Item__c.Estimation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>