force-app/main/default/objects/Estimation__c/fields/Grand_Total_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_After_Discount__c</fullName>
    <formula>Grand_Total__c -
IF(
ISPICKVAL( Discount_Mode__c  , &quot;Amount&quot;), Total_Discount_Amount__c ,
IF(
ISPICKVAL(Discount_Mode__c, &quot;Percentage&quot;),
( Grand_Total__c * Total_Discount_Percentage__c ),
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>