force-app/main/default/objects/Estimation__c/fields/Grand_Total_Items_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Items_After_Discount__c</fullName>
    <label>Grand Total Items After Discount</label>
    <summarizedField>Estimation_Item__c.Total_Price_with_Discount__c</summarizedField>
    <summaryForeignKey>Estimation_Item__c.Estimation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>