force-app/main/default/objects/Estimation__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>Date of the Sales Order</description>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>