force-app/main/default/objects/Estimation__c/fields/PO_Ref_Num__c.field-meta.xml
<CustomField>
    <fullName>PO_Ref_Num__c</fullName>
    <description>This is used in customer ref number in estimation.</description>
    <label>PO Ref Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>