force-app/main/default/objects/Estimation__c/fields/Preferred_Currency__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Currency__c</fullName>
    <label>Preferred Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>