force-app/main/default/objects/Estimation__c/fields/Shipping_Terms__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Terms__c</fullName>
    <description>Shipping Terms agreed with the Customer</description>
    <label>Shipping Terms</label>
    <length>40</length>
    <type>Text</type>
</CustomField>