force-app/main/default/objects/Estimation__c/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <displayFormat>IP/EST/26/{0000}</displayFormat>
    <label>EO Number</label>
    <type>AutoNumber</type>
</CustomField>