force-app/main/default/objects/Estimation__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to tag the tax for the estimation</description>
    <label>Tax</label>
    <referenceTo>Tax__c</referenceTo>
    <relationshipLabel>Estimations</relationshipLabel>
    <relationshipName>Estimations</relationshipName>
    <type>Lookup</type>
</CustomField>