force-app/main/default/objects/Estimation__c/fields/Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage__c</fullName>
    <description>Used to store the tax percentage for estimation</description>
    <label>Tax Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>