force-app/main/default/objects/Estimation__c/fields/Total_Amount_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_with_Tax__c</fullName>
    <label>Items Total Amount with Tax</label>
    <summarizedField>Estimation_Item__c.Total_Amount_with_Tax__c</summarizedField>
    <summaryForeignKey>Estimation_Item__c.Estimation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>