force-app/main/default/objects/Estimation__c/fields/Total_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lumpsum Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>